Implement initial animation

--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
     <body>
         <header>
             <img id="burgerLogo"
-            src="assets/images/hamburger-04-icon.png"
+            class="animation-01"
+            src="assets/images/hamburger-00-icon.png"
             alt="um suculento hamburguer"
             />
-            <p>
+            <button
+                id="startButton"
+                type="button"
+            >
                 Vamos começar?
-            </p>
+            </button>
         </header>
     </body>
 </html>
