Adjust css body proprieties

--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
                 Vamos começar?
             </button>
         </header>
+
+        <main>
+            
+        </main>
+
     </body>
 </html>
