Implement myhamburger choice

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!--FONTS-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Roboto+Slab&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="style.css" />
         <script src="script.js" charset="UTF-8" defer></script>
@@ -31,6 +31,8 @@
 
         <main>
             
+            
+
         </main>
 
     </body>
