--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <title>Tenho Fome</title>
 
+        <meta property="og:title" content="Monte seu hambúrguer" />
+        <meta
+        property="og:description"
+        content="aqui fazemos do seu jeito!"
+        />
+        <meta
+        property="og:image"
+        content="https://av-felipe.github.io/decision-structure/assets/images/hamburger-04-icon.png"
+        />
+        <meta property="og:image:width" content="400" />
+        <meta property="og:image:height" content="400" />
+        <meta property="og:locale" content="pt-BR" />
+        <meta property="og:url" content="https://av-felipe.github.io/decision-structure/" />
+
         <!--FONTS-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
